// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnterPasswordForm renders 1`] = `
<div
  className="layout"
>
  <header>
    <h1>
      Create a password
    </h1>
    <p>
      To finish creating your account you need to create a password.
    </p>
  </header>
  <article
    role="main"
  >
    <form
      action={undefined}
      id="enterpassword"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <div
          className="question-heading"
        >
          Email
        </div>
        <p />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="password"
        >
          Password
        </label>
        <p
          className="hint"
          id="password-hint"
        >
          At least 10 characters.
        </p>
        <input
          className=""
          disabled={false}
          id="password"
          maxLength={undefined}
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="password"
          value={undefined}
        />
      </div>
      <input
        type="submit"
        value="Complete account creation"
      />
    </form>
  </article>
</div>
`;

exports[`EnterPasswordForm renders with form_options 1`] = `
<div
  className="layout"
>
  <header>
    <h1>
      Create a password
    </h1>
    <p>
      To finish creating your account you need to create a password.
    </p>
  </header>
  <article
    role="main"
  >
    <form
      action="/foo/bar"
      id="enterpassword"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken"
      />
      <div
        className="field"
      >
        <div
          className="question-heading"
        >
          Email
        </div>
        <p />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="password"
        >
          Password
        </label>
        <p
          className="hint"
          id="password-hint"
        >
          At least 10 characters.
        </p>
        <input
          className=""
          disabled={false}
          id="password"
          maxLength={undefined}
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="password"
          value={undefined}
        />
      </div>
      <input
        type="submit"
        value="Complete account creation"
      />
    </form>
  </article>
</div>
`;

exports[`EnterPasswordForm renders with populated fields 1`] = `
<div
  className="layout"
>
  <header>
    <h1>
      Create a password
    </h1>
    <p>
      To finish creating your account you need to create a password.
    </p>
  </header>
  <article
    role="main"
  >
    <form
      action={undefined}
      id="enterpassword"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <div
          className="question-heading"
        >
          Email
        </div>
        <p>
          test@company.com
        </p>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="password"
        >
          Password
        </label>
        <p
          className="hint"
          id="password-hint"
        >
          At least 10 characters.
        </p>
        <input
          className=""
          disabled={false}
          id="password"
          maxLength={undefined}
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="password"
          value={undefined}
        />
      </div>
      <input
        type="submit"
        value="Complete account creation"
      />
    </form>
  </article>
</div>
`;
